force-app/main/default/objects/Product_Family_Group__mdt/Product_Family_Group__mdt.object-meta.xml
<CustomObject>
    <description>FSS 6: maps Product2.Family (+ optional Product Type 1) to a Commercial Group. resolveGroup: exact (Family,PT1) then (Family,blank) family-default then Other / POS / Reports.</description>
    <label>Product Family Group</label>
    <pluralLabel>Product Family Groups</pluralLabel>
</CustomObject>