force-app/main/default/objects/Product_Family_Group__mdt/fields/Commercial_Group__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Group__c</fullName>
    <description>FSS: target reporting group. Required.</description>
    <label>Commercial Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>