force-app/main/default/objects/Product_Family_Group__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>FSS: matches Product2.Family exactly. Required.</description>
    <label>Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>