force-app/main/default/objects/Product_Family_Group__mdt/fields/Product_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_1__c</fullName>
    <description>FSS: optional discriminator = Product2.Product_Type__c. Splits Events family.</description>
    <label>Product Type 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>